# ChangeLog for app-text/calibre
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/calibre/ChangeLog,v 1.192 2012/03/25 21:07:56 zmedico Exp $

*calibre-0.8.44 (25 Mar 2012)

  25 Mar 2012; Zac Medico <zmedico@gentoo.org> +calibre-0.8.44.ebuild,
  -calibre-0.8.42.ebuild:
  0.8.44 version bump.

*calibre-0.8.43 (18 Mar 2012)

  18 Mar 2012; Zac Medico <zmedico@gentoo.org> +calibre-0.8.43.ebuild,
  -calibre-0.8.41.ebuild:
  0.8.43 version bump.

*calibre-0.8.42 (12 Mar 2012)

  12 Mar 2012; Zac Medico <zmedico@gentoo.org> +calibre-0.8.42.ebuild,
  -calibre-0.8.40.ebuild:
  0.8.42 version bump.

*calibre-0.8.41 (06 Mar 2012)

  06 Mar 2012; Zac Medico <zmedico@gentoo.org> +calibre-0.8.41.ebuild,
  -calibre-0.8.39.ebuild:
  0.8.41 version bump.

*calibre-0.8.40 (18 Feb 2012)

  18 Feb 2012; Zac Medico <zmedico@gentoo.org> +calibre-0.8.40.ebuild,
  -calibre-0.8.38.ebuild:
  0.8.40 version bump.

  15 Feb 2012; Diego E. Pettenò <flameeyes@gentoo.org> calibre-0.8.39.ebuild:
  Calibre also requires png support in imagemagick because it converts JPEG
  images to PNG thumbnails; if PNG support is disabled, it would report 'No
  device connected'.

  14 Feb 2012; Zac Medico <zmedico@gentoo.org> calibre-0.8.38.ebuild,
  calibre-0.8.39.ebuild:
  Require python[ssl] for bug #403201.

*calibre-0.8.39 (11 Feb 2012)

  11 Feb 2012; Zac Medico <zmedico@gentoo.org> +calibre-0.8.39.ebuild,
  -calibre-0.8.37.ebuild:
  0.8.39 version bump.

*calibre-0.8.38 (05 Feb 2012)

  05 Feb 2012; Zac Medico <zmedico@gentoo.org> +calibre-0.8.38.ebuild,
  -calibre-0.8.36.ebuild:
  0.8.38 version bump.

*calibre-0.8.37 (28 Jan 2012)

  28 Jan 2012; Zac Medico <zmedico@gentoo.org> +calibre-0.8.37.ebuild,
  -calibre-0.8.35.ebuild:
  0.8.37 version bump.

  22 Jan 2012; Zac Medico <zmedico@gentoo.org> calibre-0.8.35.ebuild,
  calibre-0.8.36.ebuild:
  Add python-dateutil deps for bug #399511.

*calibre-0.8.36 (20 Jan 2012)
