@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/clementine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.53 2012/03/04 12:36:38 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/clementine/ChangeLog,v 1.54 2012/03/27 18:34:48 ssuominen Exp $
+
+  27 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
+  clementine-0.7.1-r2.ebuild, clementine-1.0.0.ebuild, clementine-1.0.1.ebuild,
+  clementine-1.0.1-r1.ebuild:
+  Pin to SLOT="0" of sys-fs/udisks
 
   04 Mar 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
   ayatana useflag is now global
